--- a/servant-on-heroku.cabal
+++ b/servant-on-heroku.cabal
@@ -17,8 +17,19 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
+                     , monad-control
+                     , monad-logger
+                     , mtl
+                     , natural-transformation
+                     , persistent
+                     , persistent-postgresql
+                     , read-env-var
                      , servant
                      , servant-server
+                     , wai
+                     , wai-extra
+                     , warp
+  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
   default-language:    Haskell2010
 
 executable servant-on-heroku-api
@@ -27,6 +38,7 @@ executable servant-on-heroku-api
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , servant-on-heroku
+  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
   default-language:    Haskell2010
 
 -- test-suite servant-on-heroku-test
