Start getting database stuff working.

--- a/servant-on-heroku.cabal
+++ b/servant-on-heroku.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                     , Models
   build-depends:       base >= 4.7 && < 5
                      , monad-control
                      , monad-logger
@@ -23,9 +24,12 @@ library
                      , natural-transformation
                      , persistent
                      , persistent-postgresql
+                     , persistent-template
                      , read-env-var
                      , servant
                      , servant-server
+                     , text
+                     , transformers-base
                      , wai
                      , wai-extra
                      , warp
